# hw_interview_questions

./: .gitmodules  CMakeLists.txt  README.md
arithmetic/: CMakeLists.txt
arithmetic/div_by_3/: CMakeLists.txt  README.md
arithmetic/fused_multiply_add/: CMakeLists.txt  README.md
arithmetic/increment/: CMakeLists.txt  README.md
arithmetic/multiplier/: CMakeLists.txt  README.md  multiplier.cpp  multiplier.sv
arithmetic/multiply_by_21/: CMakeLists.txt  README.md  multiply_by_21.cpp
arithmetic/simd/: CMakeLists.txt  README.md  simd.cpp  simd.sv  simd_pkg.vh
arithmetic/ultra_wide_accumulator/: CMakeLists.txt  README.md
clocking/: CMakeLists.txt
clocking/clk_div_by_3/: CMakeLists.txt  README.md  clk_div_by_3.cpp
clocking/mcp_formulation/: CMakeLists.txt  (+2 more)
contrib/: CMakeLists.txt
control/: CMakeLists.txt
design/: CMakeLists.txt
general/: CMakeLists.txt
memory/: CMakeLists.txt
pipelines/: CMakeLists.txt
problem_solving/: CMakeLists.txt
queues/: CMakeLists.txt
rtl/: CMakeLists.txt
rtl/clk_div_by_3/: CMakeLists.txt  clk_div_by_3.cpp
rtl/count_ones/: CMakeLists.txt  count_ones.cpp
rtl/count_zeros_32/: CMakeLists.txt  count_zeros_32.cpp
rtl/detect_sequence/: CMakeLists.txt  detect_sequence.cpp
rtl/div_by_3/: CMakeLists.txt  div_by_3.cpp
rtl/doubly_linked_list/: CMakeLists.txt  dll_pkg.sv  dll_pkg.vh  doubly_linked_list.cpp  doubly_linked_list.sv  doubly_linked_list_cntrl.sv
rtl/fibonacci/: CMakeLists.txt  fibonacci.cpp
rtl/fifo_async/: CMakeLists.txt  fifo_async.sv  fifo_async_tb.cpp  fifo_async_tb.h  fifo_async_tb.sv  mem_egress_pipe.sv
rtl/fifo_multi_push/: CMakeLists.txt  fifo_multi_push.cpp  fifo_multi_push.sv
rtl/fifo_n/: CMakeLists.txt  fifo_n.cpp
rtl/fifo_ptr/: CMakeLists.txt  fifo_ptr.cpp
rtl/fifo_sr/: CMakeLists.txt  fifo_sr.cpp
rtl/fused_multiply_add/: CMakeLists.txt  fused_multiply_add.cpp
rtl/gates_from_MUX2X1/: CMakeLists.txt  gates_from_MUX2X1.cpp
rtl/increment/: CMakeLists.txt  fast_increment.sv  increment.cpp
rtl/latency/: CMakeLists.txt  latency.cpp  latency.sv  latency.xdc.in
rtl/linked_list_fifo/: CMakeLists.txt  README.md  linked_list_fifo.cpp  linked_list_fifo.sv  linked_list_fifo_cntrl.sv  llfifo_pkg.vh
rtl/mcp_formulation/: CMakeLists.txt  mcp_formulation.cpp
rtl/missing_duplicated_word/: CMakeLists.txt  missing_duplicated_word.cpp
rtl/multi_counter/: CMakeLists.txt  multi_counter.cpp  multi_counter.sv
rtl/multi_counter_variants/: CMakeLists.txt  multi_counter_variants.cpp
rtl/multiply_by_21/: CMakeLists.txt  multiply_by_21.cpp
rtl/one_or_two/: CMakeLists.txt  one_or_two.cpp  one_or_two.sv
rtl/simd/: CMakeLists.txt  README.md  simd.cpp  simd.sv  simd_pkg.sv  simd_pkg.vh
rtl/sorted_lists/: CMakeLists.txt  sorted_lists.cpp  sorted_lists.sv
rtl/ultra_wide_accumulator/: CMakeLists.txt  README.md  ultra_wide_accumulator.cpp  ultra_wide_accumulator.sv
rtl/using_full_adders/: CMakeLists.txt  using_full_adders.cpp  using_full_adders.sv
rtl/vending_machine_dp/: CMakeLists.txt  vending_machine_dp.cpp
rtl/vending_machine_fsm/: CMakeLists.txt  vending_machine_fsm.cpp
rtl/zero_indices_fast/: CMakeLists.txt  zero_indices_fast.cpp
rtl/zero_indices_slow/: CMakeLists.txt  zero_indices_slow.cpp
(+144 files in other folders)
